<resources>
    <string name="msp_str_null" />
    <string name="msp_app_name">支付宝快捷支付服务</string>
    <string name="msp_error_title_default">提示</string>
    <string name="msp_action_settings">设置</string>
    <string name="msp_xlistview_header_hint_normal">下拉刷新</string>
    <string name="msp_xlistview_header_last_time">上次更新时间：</string>
    <string name="msp_xlistview_footer_hint_normal">查看更多</string>
    <string name="msp_close">关闭</string>
    <string name="msp_memo_user_cancel">操作已经取消。</string>
    <string name="msp_memo_app_cancel">程序或者数据出现问题。</string>
    <string name="msp_memo_server_cancel">系统繁忙，请稍后再试。</string>
    <string name="msp_memo_repeat_pay">同一订单禁止同时多次支付。</string>
    <string name="msp_mini_safty_code_info">安全码是打印在信用卡背面签名区的一组数字，一般是后3位或后4位数字</string>
    <string name="msp_mini_safty_code_title">安全码说明</string>
    <string name="msp_mini_read_protocal_title">选择阅读协议</string>
    <string name="msp_mini_choose_identitify">选择证件类别</string>
    <string name="msp_mini_card_type_text">卡类型</string>
    <string name="confirm_title">提示</string>
    <string name="cardUnbing">解除绑定</string>
    <string name="cardDefaultuse">默认使用该卡支付</string>
    <string name="cardCancle">取消</string>
    <string name="channel">WeiboChannelInfo</string>
    <string name="com_facebook_loginview_log_out_button">Logout Facebook</string>
    <string name="com_facebook_loginview_log_in_button">Login with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="market_sng_server_error">Failed to get data.Please try again</string>
    <string name="market_sng_detail_title">Details</string>
    <string name="market_sng_messagedetail_title">Message Details</string>
    <string name="market_sng_detail_play">%1$s%1$splaying</string>
    <string name="market_sng_detail_gameintro">Abstract</string>
    <string name="market_sng_detail_friendrank">Friends</string>
    <string name="market_sng_detail_intro">Details</string>
    <string name="market_sng_game_center">GameCenter</string>
    <string name="market_sng_rank_play">%1$splaying！</string>
    <string name="market_sng_rank_more">Click to load more</string>
    <string name="market_sng_rank_loadding">loading...</string>
    <string name="market_sng_rank_complete">More ranking within the game</string>
    <string name="market_sng_rank_retry">Failure.Pull down again</string>
    <string name="market_sng_rank_empty">No Ranking</string>
    <string name="market_sng_gamemanager_notice">Receive Messages</string>
    <string name="market_sng_gamemanager">GameManagement</string>
    <string name="market_sng_gamemanager_empty">"You haven't played any games"</string>
    <string name="market_sng_message_empty">No Message</string>
    <string name="market_look_fans">followed and following</string>
    <string name="market_message_num">%1$dMessages</string>
    <string name="market_message_new">Load earlier message</string>
    <string name="market_sng_msg_deleting">Succeed</string>
    <string name="market_sng_msg_deleting_notice">Sured to empty it?</string>
    <string name="market_sng_msg_new">You have messages···</string>
    <string name="market_sng_btn_startgame">Start</string>
    <string name="market_sng_category_downloaded">Downloaded Games</string>
    <string name="market_sng_category_undownload">Not Downloaded Games</string>
    <string name="market_sng_menu_gamemanager">GameManagement</string>
    <string name="market_sng_menu_messagelist">MessageList</string>
    <string name="market_sng_link_oldversion">Older GameCenter</string>
    <string name="market_sng_gameitem_rank">No.%1$s</string>
    <string name="market_sng_allword_player">Playing with you in the world</string>
    <string name="market_sng_friend_player">Ranking</string>
    <string name="market_sng_download_error">下载出现错误,请稍候重试</string>
    <string name="market_app_name">SinaAppMarket</string>
    <string name="market_title_activity_main">AppMarket</string>
    <string name="market_title_activity_app_list">AppCenter</string>
    <string name="market_title_activity_app_detail">AppDetail</string>
    <string name="market_title_activity_app_download">DownloadManager</string>
    <string name="market_downtime_send_weibo">Send a weibo</string>
    <string name="market_title_fragment_recommend">Trending</string>
    <string name="market_title_fragment_rank">Rank</string>
    <string name="market_title_fragment_app">App</string>
    <string name="market_title_fragment_game">Game</string>
    <string name="market_title_fragment_download">Download</string>
    <string name="market_title_fragment_subject">Columns</string>
    <string name="market_title_fragment_update">My Apps</string>
    <string name="market_title_fragment_good">Trending</string>
    <string name="market_title_fragment_hot">Hot</string>
    <string name="market_title_fragment_my_game">My Games</string>
    <string name="market_title_fragment_category_game">Category</string>
    <string name="market_title_fragment_category_app">Category</string>
    <string name="market_comment_hint_text">Write a comment</string>
    <string name="market_comment_hint_text2">Share the experience with your friends</string>
    <string name="market_no_search_history">No search history yet</string>
    <string name="market_clear_search_history">Clear up search history</string>
    <string name="market_input_search">Search app</string>
    <string name="market_search">Search</string>
    <string name="market_search_app">App</string>
    <string name="market_search_failure">Sorry,no results were found</string>
    <string name="market_search_correct">Are you looking for %s</string>
    <string name="market_expend_info">Detail</string>
    <string name="market_app_detail_title">Detail introduction</string>
    <string name="market_request_succ">Request succeeded!</string>
    <string name="market_request_fail">Request failed!</string>
    <string name="market_request_out_times">Dear,times out today,please try next!</string>
    <string name="market_retract_info">Hide</string>
    <string name="market_comment_str">Comment</string>
    <string name="market_comment_progress">Comments loading..</string>
    <string name="market_comment_more">See more comments</string>
    <string name="market_progress">Loading...</string>
    <string name="market_loading">Waiting...</string>
    <string name="market_cancel">Cancel</string>
    <string name="market_report_ok">OK</string>
    <string name="market_more">More</string>
    <string name="market_sd_smallsize">Not enough space of SD card</string>
    <string name="market_no_sdcard">SD card pulled out</string>
    <string name="market_network_error">Network connection error，check out the network set</string>
    <string name="market_fail_reload">Get fails, click the Refresh</string>
    <string name="market_data_error">Web server data error</string>
    <string name="market_data_error_app_offline">App offline</string>
    <string name="market_uplate">Update</string>
    <string name="market_download">Download</string>
    <string name="market_downloading">Downloading</string>
    <string name="market_installing">Installing</string>
    <string name="market_installed">Installed</string>
    <string name="market_install">Install</string>
    <string name="market_open">Open</string>
    <string name="market_web">Open</string>
    <string name="market_pause">Pause</string>
    <string name="market_continue">Continue</string>
    <string name="market_using">Using</string>
    <string name="market_share">Repost</string>
    <string name="market_like">Like</string>
    <string name="market_download_completed">Download finished</string>
    <string name="market_install_completed">Install finished</string>
    <string name="market_download_stoped">Download stoped,try latter</string>
    <string name="market_download_continue">Click to download</string>
    <string name="market_status_waiting">Waiting ...</string>
    <string name="market_status_stop">Error</string>
    <string name="market_status_pause">Paused</string>
    <string name="market_status_error">Error</string>
    <string name="market_download_error">Download failed，check out the network set</string>
    <string name="market_detail_guess_like">Recommend for you</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Log Out</string>
    <string name="ok">OK</string>
    <string name="imageviewer_back">Back</string>
    <string name="setting_summary_upload">Adjust the quality of uploading image</string>
    <string name="setting_summary_doownload">Adjust the quality of downloading image</string>
    <string name="image_size_large">High</string>
    <string name="image_size_low">Medium</string>
    <string name="setting_pic_down_upload_desc">Recommend to use high-definition in faster network speed</string>
    <string name="itemmenu_honor">Medal</string>
    <string name="detail_verify">Verified</string>
    <string name="detail_member">VIP</string>
    <string name="detail_main_info">Basic Information</string>
    <string name="detail_loginname">Account</string>
    <string name="detail_nick">Name</string>
    <string name="detail_remark">Alias</string>
    <string name="detail_gender">Gender</string>
    <string name="detail_address">Location</string>
    <string name="detail_intro">About</string>
    <string name="detail_career_info">Job Information</string>
    <string name="detail_education_info">Education</string>
    <string name="detail_other_info">Others</string>
    <string name="detail_weihao">Number</string>
    <string name="detail_createtime">Signon</string>
    <string name="detail_remark_hint">Set Alias</string>
    <string name="detail_intro_hint">None</string>
    <string name="notification_send">send</string>
    <string name="select">Select</string>
    <string name="move_and_zoom">Move and zoom</string>
    <string name="crash_clearcache">Delete browsing history</string>
    <string name="crash_update_desc">Upgrade (to new version)</string>
    <string name="crash_page_title">You just exited abnormally, you may</string>
    <string name="crash_cleardata_desc">you would be required to re-login after clearing</string>
    <string name="startweibo">Immediately open weibo</string>
    <string name="filter_rechoose">Re Choose</string>
    <string name="log_feedback">提交反馈</string>
    <string name="log_feedback_traffic">流量统计</string>
    <string name="log_feedback_detail">查看详情</string>
    <string name="log_feedback_analyse">网络诊断</string>
    <string name="log_feedback_title">"感谢你的反馈，
我们会尽快帮你解决问题！"</string>
    <string name="weibo_pkg_broken">软件包已损坏，请重新安装</string>
</resources>