<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/lyPortraitPreRoot" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.sina.weibo.view.SplitTouchImageView android:id="@id/ivPortraitPreview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.sina.weibo.view.PicCropViewFinder android:id="@id/vCropRect" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </FrameLayout>
    <RelativeLayout android:orientation="horizontal" android:background="@drawable/camera_toolbar_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnCancel" android:paddingLeft="8.0dip" android:paddingTop="10.0dip" android:paddingRight="8.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filter_rechoose" android:singleLine="true" android:layout_centerVertical="true" android:contentDescription="@string/imageviewer_back" />
        <TextView android:textSize="17.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/move_and_zoom" android:singleLine="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnOk" android:paddingLeft="8.0dip" android:paddingTop="10.0dip" android:paddingRight="8.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" android:singleLine="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/notification_send" />
    </RelativeLayout>
</LinearLayout>