<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/ly_line" android:background="@drawable/global_background" android:paddingLeft="8.0dip" android:paddingTop="18.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/bottomBtns" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/send_log" android:background="@drawable/btn_photo_album_save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/log_feedback" />
        <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/log_detail" android:background="@drawable/btn_photo_album_save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/log_feedback_detail" />
        <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/log_analyse" android:background="@drawable/btn_photo_album_save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/log_feedback_analyse" />
        <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/log_traffic" android:background="@drawable/btn_photo_album_save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/log_feedback_traffic" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottomBtns">
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/log_feedback_title" android:singleLine="false" android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>