<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="@dimen/detail_margin" android:paddingRight="@dimen/detail_margin" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/lyDetail" android:paddingTop="@dimen/detail_margin_top" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/lyVerifyAndMember" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="9.0dip">
            <RelativeLayout android:id="@id/lyVerify" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:paddingLeft="10.0dip" style="@style/user_info_detail_item">
                    <FrameLayout android:layout_width="78.0dip" android:layout_height="wrap_content">
                        <TextView android:id="@id/tvVerify" android:background="@drawable/userinfo_verify_enterprise" android:text="@string/detail_verify" style="@style/card_info_detail_verify_name" />
                    </FrameLayout>
                    <TextView android:id="@id/tvVerifyContent" style="@style/user_info_detail_content" />
                </LinearLayout>
            </RelativeLayout>
            <ImageView android:id="@id/divider1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" />
            <RelativeLayout android:id="@id/lyMember" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:paddingLeft="10.0dip" android:layout_toLeftOf="@id/ivMemberArrow" style="@style/user_info_detail_item">
                    <FrameLayout android:layout_width="78.0dip" android:layout_height="wrap_content">
                        <TextView android:id="@id/tvMember" android:text="@string/detail_member" style="@style/card_info_detail_verify_name" />
                    </FrameLayout>
                    <ImageView android:id="@id/lyMember_icon_membership" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" />
                </LinearLayout>
                <ImageView android:id="@id/ivMemberArrow" style="@style/user_info_detail_arrow" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/lyMainInfo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="9.0dip">
            <TextView android:id="@id/tvMainInfo" android:text="@string/detail_main_info" style="@style/user_info_detail_text" />
            <RelativeLayout android:id="@id/lyLogin" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_item_margin">
                <LinearLayout style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvLogin" android:text="@string/detail_loginname" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvLoginContent" style="@style/user_info_detail_content" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout android:id="@id/lyNick" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvNick" android:text="@string/detail_nick" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvNickContent" style="@style/user_info_detail_content" />
                </LinearLayout>
            </RelativeLayout>
            <ImageView android:id="@id/divider2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" />
            <RelativeLayout android:id="@id/lyRemark" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:layout_toLeftOf="@id/ivRemarkArrow" style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvRemark" android:text="@string/detail_remark" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvRemarkContent" android:hint="@string/detail_remark_hint" style="@style/user_info_detail_content" />
                </LinearLayout>
                <ImageView android:id="@id/ivRemarkArrow" style="@style/user_info_detail_arrow" />
            </RelativeLayout>
            <ImageView android:id="@id/divider3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" />
            <RelativeLayout android:id="@id/lyGender" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvGender" android:text="@string/detail_gender" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvGenderContent" style="@style/user_info_detail_content" />
                </LinearLayout>
            </RelativeLayout>
            <ImageView android:id="@id/divider4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" />
            <RelativeLayout android:id="@id/lyAddress" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvAddress" android:text="@string/detail_address" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvAddressContent" style="@style/user_info_detail_content" />
                </LinearLayout>
            </RelativeLayout>
            <ImageView android:id="@id/divider5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" />
            <RelativeLayout android:id="@id/lyIntro" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvIntro" android:text="@string/detail_intro" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvIntroContent" android:hint="@string/detail_intro_hint" style="@style/user_info_detail_content" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/lyCareerInfo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_item_margin">
            <TextView android:id="@id/tvCareerInfo" android:text="@string/detail_career_info" style="@style/user_info_detail_text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/lyEducationInfo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_item_margin">
            <TextView android:id="@id/tvEducationInfo" android:text="@string/detail_education_info" style="@style/user_info_detail_text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/lyOtherInfo" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tvOtherInfo" android:text="@string/detail_other_info" style="@style/user_info_detail_text" />
            <RelativeLayout android:id="@id/lyHonor" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_item_margin">
                <LinearLayout android:gravity="center_vertical" android:layout_toLeftOf="@id/ivHonorArrow" style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvHonor" android:text="@string/itemmenu_honor" style="@style/user_info_detail_name" />
                    <ImageView android:id="@id/imageHonorFirst" android:layout_toRightOf="@id/tvHonor" style="@style/user_info_detail_honor" />
                    <ImageView android:id="@id/imageHonorSecond" android:layout_toRightOf="@id/imageHonorFirst" style="@style/user_info_detail_honor" />
                    <ImageView android:id="@id/imageHonorThird" android:layout_toRightOf="@id/imageHonorSecond" style="@style/user_info_detail_honor" />
                    <ImageView android:id="@id/imageHonorForth" android:layout_toRightOf="@id/imageHonorThird" style="@style/user_info_detail_honor" />
                    <ImageView android:id="@id/imageHonorFifth" android:layout_toRightOf="@id/imageHonorForth" style="@style/user_info_detail_honor" />
                </LinearLayout>
                <ImageView android:id="@id/ivHonorArrow" style="@style/user_info_detail_arrow" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/lyWeihao" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:layout_toLeftOf="@id/ivWeihaoPhone" style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvWeihao" android:text="@string/detail_weihao" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvWeihaoContent" style="@style/user_info_detail_content" />
                </LinearLayout>
                <ImageView android:id="@id/ivWeihaoPhone" style="@style/user_info_detail_arrow" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/lyCreateTime" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout style="@style/user_info_detail_item">
                    <TextView android:id="@id/tvCreateTime" android:text="@string/detail_createtime" style="@style/user_info_detail_name" />
                    <TextView android:id="@id/tvCreateTimeContent" style="@style/user_info_detail_content" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>