<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/pkg_broken" android:background="#fff2f2f2" android:paddingLeft="8.0dip" android:paddingTop="18.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="22.0dip" android:text="@string/weibo_pkg_broken" />
            <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/exit" android:background="@drawable/btn_photo_album_save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/exit" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/about_rel" android:background="#fff2f2f2" android:paddingLeft="8.0dip" android:paddingTop="18.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="22.0dip" android:text="@string/crash_page_title" />
            <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/clear_cache" android:background="@drawable/btn_photo_album_save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/crash_clearcache" />
            <TextView android:textSize="12.0sp" android:textColor="#ff929292" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/crash_cleardata_desc" />
            <RelativeLayout android:orientation="horizontal" android:id="@id/skip" android:layout_width="fill_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginBottom="8.0dip">
                <TextView android:textSize="16.0sp" android:textColor="#ff929292" android:gravity="center_vertical" android:id="@id/tv_weibo_draft" android:paddingLeft="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/startweibo" android:layout_centerVertical="true" style="@style/userinfo_panel_textview_title" />
                <ImageView android:gravity="center" android:id="@id/draftboxLayout_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/draftNum" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <TextView android:textSize="14.0sp" android:textColor="#ff507daf" android:gravity="right" android:id="@id/txt_update" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/crash_update_desc" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>