<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingTop="@dimen/settings_margin_top" android:paddingBottom="@dimen/settings_margin_top" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_vertical" android:id="@id/tvUploadImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/setting_summary_upload" style="@style/SettingTitleText" />
        <RadioGroup android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/rgUpload" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@id/rbUploadHigh" android:layout_width="fill_parent" android:layout_height="@dimen/settings_item_height" android:button="@null" android:text="@string/image_size_large" android:drawableRight="@drawable/check_box_bg" />
            <ImageView android:id="@id/divider1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" />
            <RadioButton android:id="@id/rbUploadLow" android:layout_width="fill_parent" android:layout_height="@dimen/settings_item_height" android:button="@null" android:text="@string/image_size_low" android:drawableRight="@drawable/check_box_bg" />
        </RadioGroup>
        <TextView android:textColor="@color/settings_desc_color" android:gravity="center_horizontal" android:id="@id/tvPicUpUploadDescript" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/setting_pic_down_upload_desc" style="@style/SettingExplainText" />
        <TextView android:id="@id/tvDownloadImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_summary_doownload" style="@style/SettingTitleText" />
        <RadioGroup android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/rgDownload" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@id/rbDownloadHigh" android:layout_width="fill_parent" android:layout_height="@dimen/settings_item_height" android:button="@null" android:text="@string/image_size_large" android:drawableRight="@drawable/check_box_bg" />
            <ImageView android:id="@id/divider2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" />
            <RadioButton android:id="@id/rbDownloadLow" android:layout_width="fill_parent" android:layout_height="@dimen/settings_item_height" android:button="@null" android:text="@string/image_size_low" android:drawableRight="@drawable/check_box_bg" />
        </RadioGroup>
        <TextView android:textColor="@color/settings_desc_color" android:gravity="center_horizontal" android:id="@id/tvPicUpDownDescript" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_pic_down_upload_desc" style="@style/SettingExplainText" />
    </LinearLayout>
</ScrollView>